fixed video spacing. was bothering me

--- a/style-guide/public/stylesheets/application.css
+++ b/style-guide/public/stylesheets/application.css
@@ -342,8 +342,8 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%; }
+  width: 90%;
+  height: 90%; }
 
 .meter-container-1 {
   width: 100%;
